--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "main": "index.js",
   "preferGlobal": "true",
   "dependencies": {
+    "copy-paste": "^1.3.0",
     "fuse.js": "^3.0.5",
     "inquirer": "^3.2.2",
     "shelljs": "^0.7.8",
+    "util.promisify": "^1.0.0",
     "yargs": "^8.0.2"
   },
   "bin": {
@@ -20,8 +22,8 @@
     "url": "https://github.com/amacfie/cmd-menu/issues",
     "email": "amacfie@sent.com"
   },
-  "repository" : {
-    "type" : "git" ,
-    "url" : "git@github.com:amacfie/cmd-menu.git"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:amacfie/cmd-menu.git"
   }
 }
