--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "author": "Andrew MacFie",
   "license": "MIT",
   "name": "cmdmenu",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Fuzzy command-line cheatsheet",
   "main": "index.js",
   "preferGlobal": "true",
   "dependencies": {
-    "copy-paste": "^1.3.0",
+    "clipboardy": "2.3.0",
     "fuse.js": "^3.0.5",
     "inquirer": "^3.2.2",
     "shelljs": "^0.8.4",
-    "util.promisify": "^1.0.0",
     "yargs": "^8.0.2"
   },
   "bin": {
